--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <a href="POSVTA4/RECORTES.html">📄 Reimprecion de cortes</a>
   <a href="SIFEI/facturacion.html">🧾 SIFEI FACTURACION POS</a>
   <a href="MAPEOCATA/SUBIDA.html">⬆️ Subida Tecnopro Artículos</a>
-  <a href="POSVTA4/REIMPRESION-TICKETS.html">📄 Reimprimir Tickets Venta Ruta</a>
+  <a href="POSVTA4/RETICKETS.html">📄 Reimprimir Tickets Venta Ruta</a>
 </div>
 
 <footer>
