--- a/POSVTA4/RETICKETS.html
+++ b/POSVTA4/RETICKETS.html
@@ -1,299 +1,225 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Resumen de Ventas – Ruta de Venta</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Reimpresión de Tickets – PROVSOFT</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
-  <style>
-    body{
-      font-family:'Poppins',sans-serif;
-      background:linear-gradient(to right,#00416A,#E4E5E6);
-      margin:0;padding:20px;color:#111;
-    }
-    h2{color:white;text-align:center;margin-bottom:6px;}
-    #fechaDia{color:#fff;text-align:center;margin:0 0 14px;font-weight:600;}
-
-    .dashboard{
-      max-width:720px;margin:0 auto 10px;
-      background:rgba(255,255,255,.9);
-      border-radius:14px;
-      box-shadow:0 6px 18px rgba(0,0,0,.15);
-      display:flex;justify-content:space-around;
-      padding:12px;font-weight:600;font-size:16px;
-    }
-
-    .card{
-      background:rgba(255,255,255,.9);
-      border-radius:14px;
-      box-shadow:0 6px 18px rgba(0,0,0,.2);
-      padding:16px;
-      max-width:720px;
-      margin:0 auto;
-    }
-
-    table{width:100%;border-collapse:collapse;margin-top:10px;}
-    th,td{padding:8px;border-bottom:1px solid #ddd;font-size:14px;}
-    th{background:#00416A;color:#fff;}
-    tr:hover{background:#f1f5f9;}
-
-    .btnReimp{
-      background:#0c6cbd;color:#fff;border:none;
-      padding:6px 10px;border-radius:8px;
-      font-weight:600;cursor:pointer;
-    }
-    .btnReimp:hover{background:#0078d4;transform:scale(1.05);}
-
-    .total{
-      font-weight:700;text-align:right;
-      margin-top:12px;font-size:18px;
-    }
-
-    .volver{
-      display:block;text-align:center;
-      margin:20px auto 0;
-      background:#0c6cbd;color:#fff;
-      padding:10px 16px;
-      border-radius:10px;
-      text-decoration:none;
-      font-weight:600;
-      max-width:720px;
-    }
-
-    #loading{text-align:center;padding:10px;color:#00416A;font-weight:600;}
-  </style>
+<style>
+body{
+  margin:0;
+  font-family:'Poppins',sans-serif;
+  background:linear-gradient(135deg,#00416A,#E4E5E6);
+  color:#111;
+}
+header{
+  background:#0c6cbd;
+  color:#fff;
+  padding:12px;
+  text-align:center;
+  font-size:18px;
+  font-weight:700;
+}
+.card{
+  background:#fff;
+  border-radius:14px;
+  margin:12px;
+  padding:14px;
+  box-shadow:0 6px 18px rgba(0,0,0,.2);
+}
+label{font-size:13px;font-weight:600}
+input,select,button{
+  width:100%;
+  padding:10px;
+  margin-top:6px;
+  border-radius:10px;
+  border:1px solid #ccc;
+  font-size:15px;
+}
+button{
+  background:#0c6cbd;
+  color:#fff;
+  border:none;
+  font-weight:700;
+  cursor:pointer;
+}
+.ticket-row{
+  border-bottom:1px dashed #ccc;
+  padding:10px 0;
+}
+.ticket-row:last-child{border:none}
+.ticket-row button{
+  margin-top:6px;
+  background:#1e8e3e;
+}
+.small{font-size:12px;color:#555}
+</style>
 </head>
 
 <body>
 
-<h2>📋 Reimpresión de Tickets</h2>
-<p id="fechaDia"></p>
-
-<div class="dashboard">
-  <div>🧾 Ventas encontradas: <span id="lblConteo">0</span></div>
-  <div>💰 Total acumulado: <span id="lblTotalDash">$0.00</span></div>
-</div>
-<div class="card" style="margin-bottom:14px">
-  <label><b>🚚 Ruta / Vendedor</b></label>
-  <select id="selRuta" style="width:100%;padding:8px;margin-bottom:10px">
-    <option value="">Todas las rutas</option>
-  </select>
-
-  <label><b>📅 Fecha</b></label>
-  <input type="date" id="selFecha" style="width:100%;padding:8px;margin-bottom:10px">
-
-  <button class="btnReimp" style="width:100%" onclick="buscarVentas()">
-    🔎 Buscar ventas
-  </button>
-</div>
+<header>🧾 Reimpresión de Tickets – Ruta Venta</header>
 
 <div class="card">
-  <p><b>Vendedor:</b> <span id="lblUsuario">—</span></p>
+  <label>Ruta</label>
+  <input id="rutaId" placeholder="Ej. RUTA01">
 
-  <table>
-    <thead>
-      <tr>
-        <th>Folio</th>
-        <th>Hora</th>
-        <th>Total</th>
-        <th>Reimp.</th>
-      </tr>
-    </thead>
-    <tbody id="tbody"></tbody>
-  </table>
+  <label>Desde</label>
+  <input type="date" id="desde">
 
-  <div id="loading">Cargando ventas...</div>
-  <div class="total">Total del Día: <span id="lblTotal">$0.00</span></div>
+  <label>Hasta</label>
+  <input type="date" id="hasta">
+
+  <button onclick="buscar()">🔍 Buscar Tickets</button>
 </div>
 
-<a class="volver" href="POSV4PASS.html">⬅️ Volver al POS</a>
+<div class="card" id="listaTickets">
+  <div class="small">No hay resultados</div>
+</div>
 
-<script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+<!-- ================= TICKET (OCULTO) ================= -->
+<div id="ticketArea" style="display:none">
+  <div id="ticket" style="font-family:monospace;width:72mm">
+    <div style="text-align:center;font-weight:bold">
+      PROVEEDORA MATRIZ<br>
+      MADERO 690 SUR, CENTRO<br>
+      LINARES, NUEVO LEÓN<br>
+      RFC: PDD-031204-KL5
+    </div>
+    <hr>
+    <div># Venta: <span id="tFolio"></span></div>
+    <div>Fecha: <span id="tFecha"></span></div>
+    <div>Cliente: <span id="tCliente"></span></div>
+    <hr>
+    <table width="100%">
+      <thead>
+        <tr>
+          <th align="left">Desc</th>
+          <th>Cant</th>
+          <th>P.U</th>
+          <th>Imp</th>
+        </tr>
+      </thead>
+      <tbody id="tLineas"></tbody>
+    </table>
+    <hr>
+    <div>Subtotal: <span id="tSubtotal"></span></div>
+    <div>Impuestos: <span id="tImpuestos"></span></div>
+    <div>Total: <span id="tTotal"></span></div>
+    <div>Cajero: <span id="tCajero"></span></div>
+    <hr>
+    <div style="text-align:center">¡Gracias por su compra!</div>
+  </div>
+</div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-import { getFirestore, collection, query, where, getDocs, doc, getDoc } 
-from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+import {
+  getFirestore, collection, query, where, orderBy, getDocs, Timestamp
+} from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-const { jsPDF } = window.jspdf;
-
-/* 🔥 Firebase */
+/* ================= FIREBASE ================= */
 const firebaseConfig = {
   apiKey: "AIzaSyCK5nb6u2CGRJ8AB1aPlRn54b97bdeAFeM",
   authDomain: "inventariopv-643f1.firebaseapp.com",
   projectId: "inventariopv-643f1",
-  storageBucket: "inventariopv-643f1.appspot.com",
-  messagingSenderId: "96242533231",
-  appId: "1:96242533231:web:aae75a18fbaf9840529e9a"
 };
-
 const app = initializeApp(firebaseConfig);
-const db  = getFirestore(app);
+const db = getFirestore(app);
 
-/* 🔐 Sesión del POS */
-const sesion = JSON.parse(localStorage.getItem("usuario_ruta"));
+const money = n => "$" + Number(n||0).toFixed(2);
 
-if (!sesion || !sesion.id) {
-  alert("Sesión no válida. Regresa al POS.");
-  window.location.href = "POSV4PASS.html";
-  throw new Error("Sesión inexistente");
-}
+/* ================= BUSCAR ================= */
+window.buscar = async function(){
+  const ruta = rutaId.value.trim();
+  if(!ruta){ alert("Ruta requerida"); return; }
 
-const usuarioId = sesion.id;
-
-/* Mostrar vendedor */
-/* 🚚 Cargar rutas / vendedores */
-async function cargarRutas(){
-  const sel = document.getElementById("selRuta");
-  sel.innerHTML = `<option value="">Todas las rutas</option>`;
-
-  const snap = await getDocs(collection(db,"usuarios_ruta"));
-  snap.forEach(d=>{
-    const u = d.data();
-    sel.innerHTML +=
-      `<option value="${d.id}">${u.nombre || u.usuario || "Ruta"}</option>`;
-  });
-}
-
-cargarRutas();
-
-document.getElementById("lblUsuario").textContent = "Múltiples rutas";
-
-/* Fecha */
-const hoy = new Date();
-const fechaMX = hoy.toLocaleDateString("es-MX",
-  {day:'2-digit',month:'2-digit',year:'numeric'});
-document.getElementById("fechaDia").textContent =
-  `🗓️ Consulta de ventas`;
-                    
-async function cargarVentasDesdeQuery(q, fechaFiltro){
-  const tbody = document.getElementById("tbody");
-  const loading = document.getElementById("loading");
-  const lblTotal = document.getElementById("lblTotal");
-  const lblDash  = document.getElementById("lblTotalDash");
-  const lblCnt   = document.getElementById("lblConteo");
-
-  tbody.innerHTML="";
-  loading.style.display="block";
-
-  let totalDia=0, conteo=0;
-  const snap = await getDocs(q);
-
-  snap.forEach(d=>{
-    const v = d.data();
-    if(v.cortado === true) return;
-
-    if(fechaFiltro){
-      if(!v.fecha_txt) return;
-
-      const fBD = v.fecha_txt.split(",")[0];
-      const [dia,mes,anio] = fBD.split("/").map(Number);
-
-      const fSel = new Date(fechaFiltro);
-      if(
-        dia !== fSel.getDate() ||
-        mes !== fSel.getMonth()+1 ||
-        anio !== fSel.getFullYear()
-      ) return;
-    }
-
-    const tot =
-      Number(v.resumen_financiero?.total) ||
-      v.detalle?.reduce((s,i)=>s+(Number(i.importe)||0),0) ||
-      0;
-
-    totalDia += tot;
-    conteo++;
-
-    const tr = document.createElement("tr");
-    tr.innerHTML = `
-      <td>${v.folio || "—"}</td>
-      <td>${(v.fecha_txt || "").split(",")[1] || ""}</td>
-      <td style="text-align:right">$${tot.toFixed(2)}</td>
-      <td style="text-align:center">
-        <button class="btnReimp">🖨️</button>
-      </td>
-    `;
-    tr.querySelector("button").onclick = ()=>reimprimir(d.id);
-    tbody.appendChild(tr);
-  });
-
-  lblTotal.textContent = "$"+totalDia.toFixed(2);
-  lblDash.textContent  = "$"+totalDia.toFixed(2);
-  lblCnt.textContent   = conteo;
-
-  loading.textContent = conteo ? "" : "Sin ventas con esos filtros.";
-}
-
-/* 🖨️ Reimpresión */
-async function reimprimir(id){
-  const ref=doc(db,"ventas_rutav2",id);
-  const snap=await getDoc(ref);
-  if(!snap.exists()) return alert("Venta no encontrada");
-
-  const v=snap.data();
-  let t="";
-  t+="      PROVEEDORA MATRIZ\n";
-  t+=" MADERO 690 SUR, LINARES\n";
-  t+="------------------------------\n";
-  t+=`Venta: ${v.folio}\n`;
-  t+=`Fecha: ${v.fecha_txt}\n`;
-  t+=`Cliente: ${v.cliente||"PÚBLICO"}\n`;
-  t+="------------------------------\n";
-
-  (v.detalle||[]).forEach(it=>{
-    const n=(it.nombre||"").substring(0,16).padEnd(16);
-    const c=(it.cantidad||0).toFixed(2).padStart(5);
-    const i=(it.importe||0).toFixed(2).padStart(9);
-    t+=`${n}${c}${i}\n`;
-  });
-
-  t+="------------------------------\n";
-  const totalTicket =
-  Number(v.resumen_financiero?.total) ||
-  Number(v.detalle?.reduce((s,it)=>s+(Number(it.importe)||0),0)) ||
-  0;
-
-t+=`TOTAL: ${totalTicket.toFixed(2)}\n`;
-
-  t+="*** REIMPRESIÓN ***\n";
-
-  if(/Android/i.test(navigator.userAgent)){
-    window.location.href=`rawbt:text,${encodeURIComponent(t)}`;
-  }else{
-    const pdf=new jsPDF({unit:"mm",format:[80,200]});
-    pdf.setFont("courier");
-    pdf.setFontSize(10);
-    let y=10;
-    t.split("\n").forEach(l=>{pdf.text(l,5,y);y+=4;});
-    pdf.output("dataurlnewwindow");
-  }
-}
-/* 🔍 Buscar ventas por filtros */
-async function buscarVentas(){
-  const rutaId = document.getElementById("selRuta").value;
-  const fecha  = document.getElementById("selFecha").value;
-
-  let condiciones = [];
-
-  if(rutaId){
-    condiciones.push(where("usuarioId","==",rutaId));
-  }
+  const d1 = new Date(desde.value);
+  const d2 = new Date(hasta.value);
+  d2.setHours(23,59,59);
 
   const q = query(
     collection(db,"ventas_rutav2"),
-    ...condiciones
+    where("rutaId","==",ruta),
+    where("fecha",">=",Timestamp.fromDate(d1)),
+    where("fecha","<=",Timestamp.fromDate(d2)),
+    orderBy("fecha","desc")
   );
 
-  cargarVentasDesdeQuery(q, fecha);
-}
-// Carga inicial (todas las rutas, hoy)
-document.getElementById("selFecha").value =
-  new Date().toISOString().split("T")[0];
+  const snap = await getDocs(q);
+  const cont = document.getElementById("listaTickets");
+  cont.innerHTML = "";
 
-buscarVentas();                    
+  if(snap.empty){
+    cont.innerHTML = "<div class='small'>Sin resultados</div>";
+    return;
+  }
+
+  snap.docs.forEach(d=>{
+    const v = d.data();
+    const div = document.createElement("div");
+    div.className="ticket-row";
+    div.innerHTML=`
+      <strong>${v.folio}</strong><br>
+      <span class="small">${v.fecha_txt}</span><br>
+      Total: ${money(v.resumen_financiero.total)}
+      <button>🖨️ Reimprimir</button>
+    `;
+    div.querySelector("button").onclick=()=>reimprimir(v);
+    cont.appendChild(div);
+  });
+};
+
+/* ================= REIMPRESIÓN ================= */
+function reimprimir(v){
+  window.__VENTA_ACTUAL = v;
+  window.__ULTIMOS_TOTALES = v.resumen_financiero;
+
+  document.getElementById("tFolio").textContent = v.folio;
+  document.getElementById("tFecha").textContent = v.fecha_txt;
+  document.getElementById("tCliente").textContent = v.cliente;
+  document.getElementById("tSubtotal").textContent = money(v.resumen_financiero.subtotal);
+  document.getElementById("tImpuestos").textContent = money(v.resumen_financiero.impuestos);
+  document.getElementById("tTotal").textContent = money(v.resumen_financiero.total);
+  document.getElementById("tCajero").textContent = v.usuarioNombre;
+
+  const tb = document.getElementById("tLineas");
+  tb.innerHTML="";
+  v.detalle.forEach(p=>{
+    const tr=document.createElement("tr");
+    tr.innerHTML=`
+      <td>${p.nombre}</td>
+      <td align="center">${p.cantidad}</td>
+      <td align="right">${p.precio_unit.toFixed(2)}</td>
+      <td align="right">${p.importe.toFixed(2)}</td>
+    `;
+    tb.appendChild(tr);
+  });
+
+  imprimir();
+}
+
+/* ================= IMPRESIÓN ================= */
+function imprimir(){
+  let txt = document.getElementById("ticket").innerText;
+
+  if(window.InnerPrinter){
+    InnerPrinter.printText(txt);
+    return;
+  }
+
+  if(/Android/i.test(navigator.userAgent)){
+    location.href="rawbt:print?data="+encodeURIComponent(txt);
+    return;
+  }
+
+  const w=window.open("");
+  w.document.write("<pre>"+txt+"</pre>");
+  w.print();
+}
 </script>
+
 </body>
 </html>
